--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -21,7 +21,7 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 custom_template/release=""
 custom_template/debug=""
 
@@ -35,7 +35,7 @@ export_filter="scenes"
 export_files=PoolStringArray( "res://game/game.tscn" )
 include_filter=""
 exclude_filter=""
-export_path="builds/windows/build.x86_64.exe"
+export_path="builds/windows/build.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -48,7 +48,7 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 custom_template/release=""
 custom_template/debug=""
 codesign/enable=false
@@ -61,9 +61,67 @@ codesign/description=""
 codesign/custom_options=PoolStringArray(  )
 application/icon=""
 application/file_version=""
-application/product_version=""
-application/company_name=""
-application/product_name=""
+application/product_version="0.0.1"
+application/company_name="Vivax"
+application/product_name="Unnamed Card Game"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
+
+[preset.2]
+
+name="HTML5"
+platform="HTML5"
+runnable=true
+custom_features=""
+export_filter="scenes"
+export_files=PoolStringArray( "res://game/game.tscn" )
+include_filter=""
+exclude_filter=""
+export_path="builds/html/index.html"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.2.options]
+
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=false
+html/custom_html_shell=""
+html/head_include=""
+custom_template/release=""
+custom_template/debug=""
+
+[preset.3]
+
+name="Mac OSX"
+platform="Mac OSX"
+runnable=true
+custom_features=""
+export_filter="scenes"
+export_files=PoolStringArray( "res://game/game.tscn" )
+include_filter=""
+exclude_filter=""
+export_path="builds/mac/build.x86_64.zip"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.3.options]
+
+custom_template/debug=""
+custom_template/release=""
+application/name="Unnamed Card Game"
+application/info="Made with Godot Engine"
+application/icon=""
+application/identifier=""
+application/signature=""
+application/short_version="1.0"
+application/version="0.1"
+application/copyright=""
+display/high_res=false
+privacy/camera_usage_description=""
+privacy/microphone_usage_description=""
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
